# AliceO2

./: CODEOWNERS
CCDB/: CMakeLists.txt  README.md
CCDB/include/CCDB/: BasicCCDBManager.h  CcdbApi.h
CCDB/src/: CcdbApi.cxx
CCDB/test/: testCcdbApi.cxx  testCcdbApiHeaders.cxx
Common/Utils/: CMakeLists.txt
Common/Utils/src/: CommonUtilsTestLinkDef.h  ConfigurableParam.cxx  ConfigurableParamTest.cxx  NameConf.cxx  StringUtils.cxx
Common/Utils/test/: testConfigurableParam.cxx
DataFormats/Reconstruction/: CMakeLists.txt
DataFormats/Reconstruction/src/: TrackParametrization.cxx  TrackParametrizationWithError.cxx
DataFormats/common/src/: CommonDataFormatLinkDef.h
DataFormats/simulation/src/: InteractionSampler.cxx
Detectors/AOD/: CMakeLists.txt
Detectors/AOD/src/: AODProducerWorkflowSpec.cxx
Detectors/Base/: CMakeLists.txt
Detectors/Base/src/: DetectorsBaseLinkDef.h  MatLayerCyl.cxx  MatLayerCylSet.cxx  O2Tessellated.cxx  Propagator.cxx  TGeoGeometryUtils.cxx  bvh2_extra_kernels.h  bvh2_third_party.h
Detectors/CTF/test/: test_ctf_io_cpv.cxx
Detectors/Calibration/testMacros/: getRunParameters.cxx
Detectors/DCS/src/: DataPointCreator.cxx
Detectors/GlobalTracking/src/: MatchTPCITS.cxx
Detectors/Passive/: CMakeLists.txt
Detectors/Raw/: README.md
Framework/AnalysisSupport/: CMakeLists.txt
Framework/Core/: CMakeLists.txt  COOKBOOK.md
Framework/Core/scripts/dpl-mcp-server/: README.md  dpl_mcp_server.py  pyproject.toml
Framework/GUISupport/: CMakeLists.txt
GPU/Common/: GPUCommonConfigurableParam.h
GPU/GPUTracking/: CMakeLists.txt
GPU/TPCFastTransformation/: CMakeLists.txt  CorrectionMapsHelper.h  Spline1DSpec.h  Spline2DHelper.cxx  Spline2DHelper.h  Spline2DSpec.cxx  Spline2DSpec.h  SplineSpec.h  TPCFastSpaceChargeCorrection.cxx  TPCFastSpaceChargeCorrection.h  TPCFastSpaceChargeCorrectionMap.h  TPCFastTransform.cxx  TPCFastTransform.h  TPCFastTransformGeo.cxx  TPCFastTransformGeo.h  TPCFastTransformGeoPOD.h  TPCFastTransformManager.cxx  TPCFastTransformPOD.cxx  TPCFastTransformPOD.h  TPCFastTransformationLinkDef_O2.h
GPU/Utils/: CMakeLists.txt  FlatObject.h  GPUUtilsLinkDef.h
GPU/documentation/: build-O2.md  deterministic-mode.md
Generators/: CMakeLists.txt
Generators/src/: Generator.cxx  GeneratorFactory.cxx  GeneratorHepMC.cxx  GeneratorHybrid.cxx  GeneratorService.cxx  TPCLoopers.cxx  TPCLoopersParam.cxx
Steer/: CMakeLists.txt
Steer/DigitizerWorkflow/: CMakeLists.txt
Steer/src/: CollisionContextTool.cxx  O2MCApplication.cxx
dependencies/: FindO2GPU.cmake  O2Dependencies.cmake
macro/: build_geometry.C  o2sim.C
prodtests/: full_system_test.sh  sim_challenge.sh
prodtests/full-system-test/: dpl-workflow.sh  start_tmux.sh
run/: O2PrimaryServerDevice.h  O2SimDevice.h  dpl_eventgen.cxx
scripts/geometry/: O2_CADtoTGeo.py  README.md  simulating_CAD_modules.md
(+746 files in other folders)
