[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpl-mcp-server"
version = "0.1.0"
description = "MCP server for monitoring DPL (Data Processing Layer) workflows"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
dpl-mcp-server = "dpl_mcp_server:main"

[tool.hatch.build.targets.wheel]
include = ["dpl_mcp_server.py"]
